2008-12-14  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h: Found some Nikon property ids.

2008-11-27  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Got the data for the D700 and D300, included.
	  Changed nikon capture code to work with the D700 and other
	  newer Nikon DSLRs.

	* ptp.[ch]: Decode the Nikon DSLR current rotation flag.
	* ptp.h: Mark up the operation codes for Nikons.

2008-11-23  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Newer Nikon DSLRs "hide" the Nikon
	  vendor device properties, re-add them when we
	  find them missing. Reviewed with a D80 already.

	* ptp.h: Fixed Canon Capture to Card mode bug.

	* ptp.c,ptp.h: Dumper for lots of Canon properties
	  for --summary.

2008-11-05  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-private.h, library.c: Move init_ptp_fs
	  out of initialization and into the routines
	  that need it.

	  This avoids loading the whole PTP fs for:
	  - configuration
	  - summary

2008-10-26  Marcus Meissner  <marcus@jet.franken.de>

	* ptp.h,ptp.c: Started adding PTP v1.1 defines.

2008-10-12  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Adjusted summary output a bit.

	* library.c: Handle "wrong parent" or "no root parent"
	  devices every time, so when we autodetect new ones
	  we do not need to add them to the list.
	  Should avoid releasing libgphoto2 for new iPhones etc.

	* library.c: If a filename is empty or not set, replace it by
	  the 8 char hexcode. (Should enable movie retrieval on
	  Panasonics).

2008-10-09  Marcus Meissner  <marcus@jet.franken.de>

	* ptp-pack.c: factored out ptp time string parser
	* library.c: also support MTP commands for cameras.
	  (fast directory download)
	  Using it for the Canon Digital IXUS SX100IS already.

2008-09-20  Marcus Meissner  <marcus@jet.franken.de>

	* library.c: Do not disable viewfinder just after one preview.
	  Repeatedly switching on/off viewfinder mode causes refocus
	  all the time.
