@@ -1,3 +1,8 @@
+2008-12-21  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Handle CR2 in Canon ObjectAdd events
+	* ptp.c, config.c: More Nikon property handling
+
 2008-12-14  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptp.h: Found some Nikon property ids.
